<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteDetailActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:id="@+id/back_to_notes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/back_icon_foreground"
                android:background="@color/colorPrimary"/>
            <TextView
                style="@style/nav_items_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/app_title" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:textColor="@color/text_black">
            <TextView
                android:id="@+id/item_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="25sp"
                android:textColor="@color/text_black"
                android:hint="@string/no_title"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp">
            <TextView
                android:id="@+id/item_text"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:textSize="20sp"
                android:textColor="@color/text_black"
                android:hint="@string/no_text"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp">
            <TextView
                android:id="@+id/item_date"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="20sp"
                android:textColor="@color/text_black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="170dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <TextView
                    android:id="@+id/delete_btn_notes"
                    style="@style/delete_btn"
                    android:layout_width="match_parent"
                    android:textAlignment="textEnd"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/delete"
                    tools:ignore="RtlCompat" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/add_fav_btn"
                    style="@style/fav_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/fav"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>